Updated documentation to use pythontex

--- a/doc/compatibleTable.tex
+++ b/doc/compatibleTable.tex
@@ -1,17 +1,16 @@
-\begin{table}[ht]
+\begin{table}[htp]
 	\begin{center}
 	\caption{Does 'python test.py' return 0?}
 	\label{tab:compatibleTable}
 		\begin{tabular}{rc}
 		\toprule
-			 & Compatible\\
+			{} & {Compatible}\\
 			\midrule
-			python2.4 & True\\
-			python2.5 & True\\
-			python2.6 & True\\
-			python2.7 & True\\
-			python3.3 & True\\
-			pypy-c & True\\
+			{python2.4} & True\\
+			{python2.5} & True\\
+			{python2.6} & True\\
+			{python2.7} & True\\
+			{python3.3} & True\\
 		\bottomrule
 		\end{tabular}
 	\end{center}
