--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -34,7 +34,7 @@ all options using the python syntax. Currently the python version is the best ma
 \label{sec:matlab}
 \input{tex/matlab}
 
-\chapter{Usage}
+\chapter{General Usage}
 \label{sec:python}
 \input{tex/python}
 
