--- a/doc/facT.tex
+++ b/doc/facT.tex
@@ -1,22 +1,22 @@
-\begin{table}[ht]
+\begin{table}[htp]
 	\begin{center}
 	\caption{Comparing execution time for
-    the different factorial implementations}
+the different factorial implementations}
 	\label{tab:facT}
 		\begin{tabular}{rccc}
 		\toprule
-			$n$ & Built-in [$s$] & Recursive [$s$] & Sequential [$s$]\\
+			{$n$} & {Built-in [$s$]} & {Recursive [$s$]} & {Sequential [$s$]}\\
 			\midrule
-			$0$ & $0.211$ & $0.423$ & $0.598$\\
-			$1$ & $0.264$ & $0.611$ & $1.654$\\
-			$2$ & $0.326$ & $1.055$ & $1.673$\\
-			$3$ & $0.385$ & $1.585$ & $1.888$\\
-			$4$ & $0.428$ & $1.870$ & $2.133$\\
-			$5$ & $0.491$ & $2.343$ & $2.317$\\
-			$6$ & $0.552$ & $2.748$ & $2.495$\\
-			$7$ & $0.658$ & $3.338$ & $2.716$\\
-			$8$ & $0.733$ & $5.291$ & $2.866$\\
-			$9$ & $0.802$ & $6.493$ & $3.166$\\
+			{0} & $0.094$ & $0.214$ & $0.570$\\
+			{1} & $0.113$ & $0.236$ & $1.631$\\
+			{2} & $0.138$ & $0.471$ & $1.891$\\
+			{3} & $0.154$ & $0.721$ & $2.062$\\
+			{4} & $0.188$ & $0.913$ & $2.219$\\
+			{5} & $0.208$ & $1.132$ & $2.339$\\
+			{6} & $0.223$ & $3.248$ & $2.267$\\
+			{7} & $0.247$ & $4.007$ & $1.073$\\
+			{8} & $0.271$ & $3.746$ & $1.171$\\
+			{9} & $0.292$ & $5.072$ & $1.253$\\
 		\bottomrule
 		\end{tabular}
 	\end{center}
