--- a/doc/table_ohm2.tex
+++ b/doc/table_ohm2.tex
@@ -1,10 +1,10 @@
-\begin{table}[ht]
+\begin{table}[htp]
 	\begin{center}
 	\caption{Current through $50 \Omega$ resistor}
 	\label{tab:table_ohm2}
 		\begin{tabular}{cc}
 		\toprule
-			$V$ [V] & $I=V/R$ [A]\\
+			{$V$ [V]} & {$I=V/R$ [A]}\\
 			\midrule
 			$1$ & $0.02$\\
 			$2$ & $0.04$\\
