--- a/doc/tex/texPreamble.tex
+++ b/doc/tex/texPreamble.tex
@@ -31,6 +31,15 @@
 \usepackage{booktabs}           % Fancy tables
 
 \usepackage{pythontex}
+\setpythontexworkingdir{.}
+
+\usepackage{listings}           % include code
+\lstset{language = python,
+  showspaces = false,
+  showtabs = false,
+  showstringspaces = false,
+  mathescape = true}
+
 
 % Useful macros
 \providecommand{\fixme}[1]{\textbf{{\textsc{FIXME:} #1 }}}
