--- a/doc/niceTable.tex
+++ b/doc/niceTable.tex
@@ -1,10 +1,10 @@
-\begin{table}[ht]
+\begin{table}[htp]
 	\begin{center}
 	\caption{Nice table!}
 	\label{tab:niceTable}
 		\begin{tabular}{cc}
 		\toprule
-			$x$ & $x^2$\\
+			{$x$} & {$x^2$}\\
 			\midrule
 			$1$ & $1$\\
 			$2$ & $4$\\
