--- a/doc/table_ohm.tex
+++ b/doc/table_ohm.tex
@@ -1,10 +1,10 @@
-\begin{table}[ht]
+\begin{table}[htp]
 	\begin{center}
 	\caption{Current through $50 \Omega$ resistor}
 	\label{tab:table_ohm}
 		\begin{tabular}{cc}
 		\toprule
-			$V$ & $I=V/R$\\
+			{$V$} & {$I=V/R$}\\
 			\midrule
 			$1 V$ & $0.02 A$\\
 			$2 V$ & $0.04 A$\\
