--- a/test/test.tex
+++ b/test/test.tex
@@ -175,3 +175,15 @@
     \end{tabular}
   \end{center}
 \end{table}
+%%%pandas
+\begin{table}[htp]
+	\begin{center}
+		\begin{tabular}{ccc}
+		\toprule
+			$0$ & $1$ & $1$\\
+			$1$ & $2$ & $4$\\
+			$2$ & $3$ & $9$\\
+		\bottomrule
+		\end{tabular}
+	\end{center}
+\end{table}
