--- a/doc/tex/texPreamble.tex
+++ b/doc/tex/texPreamble.tex
@@ -29,6 +29,7 @@
 \usepackage[amssymb]{SIunits}   % provides SI suffixes
 \usepackage{units}              % provides \unit[1]{\centi\meter}
 \usepackage{booktabs}           % Fancy tables
+\usepackage{caption}            % Fixes spacing between caption and table
 
 \usepackage{pythontex}
 \setpythontexworkingdir{.}
