--- a/doc/tex/python.tex
+++ b/doc/tex/python.tex
@@ -155,7 +155,7 @@ m = np.zeros((3, 2))
 m[:, 0] = np.arange(1, 3+1)
 m[:, 1] = 1./m[:, 0]
 
-rl = ['$x$', '$1/x$']
+hr = ['$x$', '$1/x$']
 t = matrix2latex(m, headerRow=hr,
                  format='%.2f')
 \end{pyblock}
@@ -182,18 +182,18 @@ R = 50. # ohm
 m2[:, 0] = np.arange(1, 3+1)
 m2[:, 1] = m[:, 0]/R
 c = 'Current through $%g \Omega$ resistor' % R
-rl = ['$V$', '$I=V/R$']
-t = matrix2latex(m2, 'table_ohm', headerRow=rl,
+hr = ['$V$', '$I=V/R$']
+t = matrix2latex(m2, 'table_ohm', headerRow=hr,
                  formatColumn=['$%d V$', '$%.2f A$'],
                  caption=c)
 \end{pyblock}
 \input{table_ohm}
 
 This is however not the recommend way to give units, since they should
-be given in the header
+be given in the header, see tabel \ref{tab:table_ohm2}.
 \begin{pyblock}
-rl = ['$V$ [V]', '$I=V/R$ [A]']
-t = matrix2latex(m2, 'table_ohm2', headerRow=rl,
+hr = ['$V$ [V]', '$I=V/R$ [A]']
+t = matrix2latex(m2, 'table_ohm2', headerRow=hr,
                  formatColumn=['$%d$', '$%.2f$'],
                  caption=c)
 \end{pyblock}
