Uggly, allow headerRow=None, headerColumn=None to turn off the previously added feature.

--- a/test/test.tex
+++ b/test/test.tex
@@ -204,6 +204,19 @@
 		\end{tabular}
 	\end{center}
 \end{table}
+%%%pandas_columns_noHeaders
+\begin{table}[htp]
+	\begin{center}
+		\begin{tabular}{cc}
+		\toprule
+                $1$ & $1$\\
+		$2$ & $2$\\
+		$3$ & $3$\\
+		{-} & $4$\\
+		\bottomrule
+		\end{tabular}
+	\end{center}
+\end{table}
 %%%pandas_series
 \begin{table}[htp]
 	\begin{center}
