--- a/test/test.tex
+++ b/test/test.tex
@@ -222,6 +222,20 @@
 	\begin{center}
 		\begin{tabular}{rc}
 		\toprule
+			{a} & $2$\\
+			{b} & $4$\\
+			{c} & $2$\\
+			{d} & $42$\\
+			{e} & $5$\\
+		\bottomrule
+		\end{tabular}
+	\end{center}
+\end{table}
+%%%pandas_series_dataFrame
+\begin{table}[htp]
+	\begin{center}
+		\begin{tabular}{rc}
+		\toprule
 			{} & {0}\\
 			\midrule
 			{a} & $2$\\
