added setup.py for python installation

--- a/doc/tex/texPreamble.tex
+++ b/doc/tex/texPreamble.tex
@@ -26,8 +26,7 @@
 
 \usepackage{graphicx}           % include figures
 \usepackage{hyperref}           % links
-\usepackage[amssymb]{SIunits}   % provides SI suffixes
-\usepackage{units}              % provides \unit[1]{\centi\meter}
+\usepackage{siunitx}
 \usepackage{booktabs}           % Fancy tables
 \usepackage{caption}            % Fixes spacing between caption and table
 
