--- a/doc/tex/python.tex
+++ b/doc/tex/python.tex
@@ -181,7 +181,7 @@ m2 = np.zeros((3, 2))
 R = 50. # ohm
 m2[:, 0] = np.arange(1, 3+1)
 m2[:, 1] = m[:, 0]/R
-c = 'Current through $%g \Omega$ resistor' % R
+c = r'Current through $%g \Omega$ resistor' % R
 hr = ['$V$', '$I=V/R$']
 t = matrix2latex(m2, 'table_ohm', headerRow=hr,
                  formatColumn=['$%d V$', '$%.2f A$'],
@@ -258,7 +258,9 @@ of some advanced table techniques.
 The booktabs.pdf documentation is an excellent guide to proper table creation,
 matrix2latex does not incorporate all the features of this package (yet).
 
-\subsection{Pandas support}
+\subsection{Compatibility with other packages}
+Bellow support for the python package Pandas and the latex package siunitx will be outlined.
+\subsubsection{Pandas support (a python package)}
 Some preliminary support for Pandas\footnote{\url{http://pandas.pydata.org/}}
 is available, pandas series is shown in table \ref{tab:pd_series}, while
 a pandas DataFrame is displayed in table \ref{tab:pd_data_frame}.
@@ -285,6 +287,35 @@ and \pygment{python}{columns} attributes for
 \pygment{python}{headerColumn} and
 \pygment{python}{headerRow} respectively. You can override this behavior by passing
 \pygment{python}{headerColumn=None, headerRow=None}.
+
+\subsubsection{siunitx (a latex package)}
+\pygment{python}{siunitx} provides support for physical quantities with units
+and introduces a new column type called
+\pygment{latex}{S} which is supported by matrix2latex.
+Note that the dollar signs must be suppressed, so the 
+\pygment{python}{format} is changed from the default
+\pygment{python}{'$%.2g$'}
+to
+\pygment{python}{'%.2g'}.
+\begin{pycode}[siunitx]
+from matrix2latex import matrix2latex
+\end{pycode}
+\begin{pyblock}[siunitx]
+import numpy as np
+R1 = 50 # ohm
+R2 = 377 # ohm
+V = np.array([1, 1.2, 100]) # V
+I1 = V/R1 # A
+I2 = V/R2
+caption = r"""Calculated currents through a
+$\SI{%g}{\ohm}$ and $\SI{%g}{\ohm}$
+resistor.""" % (R1, R2)
+headerRow = [['$V$', r'$V/\SI{%g}{\ohm}$' % R1, r'$V/\SI{%g}{\ohm}$' % R2],
+             [r'\si{V}', r'\si{A}', r'\si{A}']]
+t = matrix2latex([V, I1, I2], caption=caption, transpose=True,
+                 alignment='S', format='%.2g', headerRow=headerRow)
+\end{pyblock}
+\py[siunitx]{t}
 %Both caption and label will do nothing if tabular environment is not used.
 % \begin{pycode}
 % import sys
