update on installation instructions

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,13 +1,8 @@
 == Python ==
-Place the folder matrix2latex/ containing at least:
-- __init__.py, matrix2latex.py, fixEngineeringNotation.py, error.py and IOString.py
-(the rest of the files are optional), somewhere in out PYTHONPATH. 
-
-Your current working directory is always on your PYTHONPATH.
-
-Hint: on unix systems do:
-echo $PYTHONPATH
-to see a list of locations. Other users: ask google about PYTHONPATH for your operating system.
+To use the code place the folder matrix2latex/ in our \verb!PYTHONPATH!, 
+this can be done with the usual
+> sudo python setup.py install
+Alternativly, your current working directory is always on your \verb!PYTHONPATH!.
 
 == Matlab ==
 Place the matlab files in our MATLABPATH containing at least:
