updated documentation to point to github

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -18,8 +18,8 @@
 
 \begin{document}
 \maketitle
-This is the documentation for the matrix2latex package, development can be found here:
-\url{http://code.google.com/p/matrix2latex/}
+This is the documentation for the matrix2latex package, development can now be found here:
+\url{https://github.com/TheChymera/matrix2latex}
 
 This package provides easy translation of vector/matrices in python or matlab into latex table/matrix code.
 The implementation is written in both matlab and python, resulting in some discrepancies in features and usage.
