added a simple archiver script and a small doc-fix

--- a/doc/tex/introduction.tex
+++ b/doc/tex/introduction.tex
@@ -23,7 +23,7 @@ These features are discussed in more detail in chapter \ref{sec:python}.
 \subsection{Python}
 The code is written without any dependencies and should be compatible with most python versions.
 Table \ref{tab:compatibleTable} reflects the python versions currently installed
-on my system\footnote{Mac OS X 10.6, python installed trough macport.}
+on my system\footnote{Mac OS X 10.10, python installed through macport.}
 and if the testsuit for matrix2latex passes. If you find a python version where
 it doesn't work let me know.
 \input{compatibleTable}
