updated matlab test, corrected engineering notation

--- a/test/test.tex
+++ b/test/test.tex
@@ -175,6 +175,30 @@
     \end{tabular}
   \end{center}
 \end{table}
+%%%nicefloat
+\begin{table}[htp]
+  \begin{center}
+    \begin{tabular}{c}
+      \toprule
+      $1.23456\e{-05}$\\
+      $1\e{-15}$\\
+      $1.2345\e{+09}$\\
+      \bottomrule
+    \end{tabular}
+  \end{center}
+  \end{table}
+%%%nicefloat_4g
+\begin{table}[htp]
+  \begin{center}
+    \begin{tabular}{c}
+      \toprule
+      $1.235\e{-05}$\\
+      $1\e{-15}$\\
+      $1.234\e{+09}$\\
+      \bottomrule
+    \end{tabular}
+  \end{center}
+\end{table}
 %%%pandas_dataframe
 \begin{table}[htp]
 	\begin{center}
