Use warning not print. added some tests

--- a/test/test.tex
+++ b/test/test.tex
@@ -199,6 +199,28 @@
     \end{tabular}
   \end{center}
 \end{table}
+%%%non_rectangular
+\begin{table}[htp]
+  \begin{center}
+    \begin{tabular}{ccc}
+      \toprule
+      $1$ & $2$ & {-}\\
+      $1$ & $2$ & $3$\\
+      $5$ & {-} & {-}\\
+      \bottomrule
+    \end{tabular}
+  \end{center}
+\end{table}
+%%%format_formatColumn_Warning
+\begin{table}[htp]
+  \begin{center}
+    \begin{tabular}{cc}
+      \toprule
+      1\e{+15} & 1.23456\e{+15}\\
+      \bottomrule
+    \end{tabular}
+  \end{center}
+\end{table} 
 %%%pandas_dataframe
 \begin{table}[htp]
 	\begin{center}
