hacked around so that the python2.4 test will run.

--- a/doc/compatibleTable.tex
+++ b/doc/compatibleTable.tex
@@ -6,7 +6,7 @@
 		\toprule
 			{} & {Compatible}\\
 			\midrule
-			{python2.4} & False\\
+			{python2.4} & True\\
 			{python2.6} & True\\
 			{python2.7} & True\\
 			{python3.3} & True\\
